--- a/Applications/Picture Edit.app/Localizations/Ukrainian.lang
+++ b/Applications/Picture Edit.app/Localizations/Ukrainian.lang
@@ -12,7 +12,7 @@
 	newPicture = "Нова картинка",
 	width = "Ширина",
 	height = "Висота",
-	open = "ВІДЧИНЕНО",
+	open = "Відкрити",
 	openRecent = "Відкрити нещодавно",
 	openFromURL = "Відкрити з URL-адреси",
 	file = "Файл",
@@ -29,7 +29,7 @@
 		"V - інструмент переміщення",
 		"C - інструмент зміни розміру",
 		"Alt - інструмент вибору",
-		"Б - інструмент пензлик",
+		"Б - інструмент пензлика",
 		"E - інструмент гумка",
 		"Т – текстовий інструмент",
 		"G – інструмент заповнення",
@@ -43,8 +43,8 @@
 	outline = "Контур",
 	rasterizeLine = "Раструвати рядок",
 	rasterizeEllipse = "Раструвати еліпс",
-	clear = "Ясно",
-	crop = "Урожай, врожай",
+	clear = "Очистити",
+	crop = "Обрізати",
 	tool2 = "Інструмент «Переміщення» дозволяє переміщувати зображення за бажанням. ",
 	tool3 = "Інструмент зміни розміру дозволяє змінювати розмір зображення в режимі реального часу. ",
 	expand = "Розгорнути",
@@ -52,34 +52,34 @@
 	pickBack = "Виберіть фон:",
 	pickFor = "Виберіть передній план:",
 	tool5 = "Класичний інструмент пензля для виконання малювання із заданим радіусом і прозорістю. ",
-	drawBack = "Намалювати фон:",
-	drawFor = "Намалювати передній план:",
-	drawAlpha = "Намалюй альфа:",
-	drawSym = "Намалювати символ:",
+	drawBack = "Малювати на фоні:",
+	drawFor = "Малювати на передньому плані:",
+	drawAlpha = "Змінити прозорість:",
+	drawSym = "Змінити символ:",
 	symToDraw = "Символ для малювання",
-	alphaVal = "Альфа-значення:",
+	alphaVal = "Прозорість:",
 	radius = "Радіус:",
-	tool6 = "Інструмент Eraser очищає пікселі так само, як інструмент пензля. ",
-	eraseBack = "Видалити фон:",
-	eraseFor = "Видалити передній план:",
-	eraseAlpha = "Видалити альфа-версію:",
-	eraseSym = "Стерти символ:",
+	tool6 = "Інструмент гумка очищає пікселі так само, як інструмент пензля. ",
+	eraseBack = "Стирати на фоні:",
+	eraseFor = "Стирати на передньому плані:",
+	eraseAlpha = "Стирати прозорість:",
+	eraseSym = "Стирати символи:",
 	tool7 = "Інструмент «Текст» дозволяє вводити деякі текстові дані з вибраним основним кольором прямо на зображенні! ",
 	tool8 = "Інструмент «Заливка» дозволяє автоматично заповнювати області вибраним основним кольором, як у Paint. ",
 	tool9 = "Інструмент Брайля дозволяє малювати пікселі за допомогою символів Брайля на зображенні. ",
 	image = "Зображення",
 	edit = "Редагувати",
-	rotate90 = "Поверніть на 90 градусів",
-	rotate180 = "Поверніть на 180 градусів",
-	rotate270 = "Поверніть на 270 градусів",
-	flipVertical = "Переверніть вертикально",
-	flipHorizontal = "Переверніть горизонтально",
-	hueSaturation = "Відтінок насиченість",
-	colorBalance = "Колірний баланс",
+	rotate90 = "Повернути на 90 градусів",
+	rotate180 = "Повернути на 180 градусів",
+	rotate270 = "Повернути на 270 градусів",
+	flipVertical = "Перевернути по вертикально",
+	flipHorizontal = "Перевернути по горизонтально",
+	hueSaturation = "Відтінок/насиченість",
+	colorBalance = "Баланс кольору",
 	photoFilter = "Фотофільтр",
 	invertColors = "Інвертувати кольори",
-	blackWhite = "Чорний і білий",
-	gaussianBlur = "Gaussian Blur",
+	blackWhite = "Чорно-білий фільтр",
+	gaussianBlur = "Розмиття по гауссу",
 	hue = "Відтінок:",
 	saturation = "насиченість:",
 	brightness = "Яскравість:",
