в Русском же не говорят "начните"

--- a/Applications/Picture View.app/Localizations/Ukrainian.lang
+++ b/Applications/Picture View.app/Localizations/Ukrainian.lang
@@ -7,6 +7,6 @@
 	setWallpaper = "Ви хочете встановити цю картинку як шпалери?",
 	yes = "Так",
 	no = "Ні",
-	start = "Почніть",
+	start = "Почати",
 	cancel = "Скасувати",
 }
