--- a/Installer/Localizations/Ukrainian.lang
+++ b/Installer/Localizations/Ukrainian.lang
@@ -3,16 +3,16 @@
 	password = "Пароль",
 	submitPassword = "Підтвердіть пароль",
 	passwordsArentEqual = "Паролі не збігаються",
-	usernameInvalid = "Invalid username",
+	usernameInvalid = "Некоректне ім'я користовача",
 	withoutPassword = "Без пароля:",
 	wallpapers = "Шпалери:",
-	screensavers = "Заставка:",
+	screensavers = "Заставки:",
 	applications = "Сторонні додатки:",
 	languages = "Пакети підтримки мов:",
 	accept = "Я приймаю:",
 	select = "Виберіть диск для встановлення",
 	erase = "Стерти",
-	used = "використовуваний",
+	used = "Використано",
 	setup = "Налаштування профілю",
 	customize = "Налаштування завантажень",
 	flashing = "Записуємо EEPROM...",
