Fix typo мирного рішення не буде.

--- a/Applications/Calendar.app/Localizations/Ukrainian.lang
+++ b/Applications/Calendar.app/Localizations/Ukrainian.lang
@@ -10,10 +10,10 @@
 		"червень",
 		"липень",
 		"серпень",
-		"Вересень",
+		"вересень",
 		"жовтень",
-		"Листопад",
-		"Грудень",
+		"листопад",
+		"грудень",
 	},
 	startWeek = "Початок тижня з",
 	monday = "понеділка",
