--- a/Applications/MineCode IDE.app/Localizations/Ukrainian.lang
+++ b/Applications/MineCode IDE.app/Localizations/Ukrainian.lang
@@ -18,7 +18,7 @@
 	url = "http://example.com/something.lua",
 	getFromWeb = "Завантажити з URL",
 	downloading = "Триває завантаження файлу...",
-	debugging = "Отладчик на рядку",
+	debugging = "Відладчик на рядку",
 	runtimeError = "Помилка при виконанні програми",
 	variablesNotAvailable = "Не знайдено можливих змінних",
 	variables = "Значення змінних:",
@@ -60,9 +60,9 @@
 	paste = "Вставити",
 	selectAll = "Виділити все",
 	edit = "Редагувати",
-	comment = "Коментувати",
+	comment = "Закоментувати",
 	indent = "Табулювати",
 	unindent = "Детабулювати",
-	flashEEPROM = "Записати на EEPROM",
+	flashEEPROM = "Записати у EEPROM",
 	flashingEEPROM = "Запис в процесі. Не вимикайте комп'ютер...",
 }
