--- a/Applications/Nanomachines.app/Localizations/Ukrainian.lang
+++ b/Applications/Nanomachines.app/Localizations/Ukrainian.lang
@@ -1,5 +1,5 @@
 {
-	activeEffects = "Поточні ефекти",
+	activeEffects = "Активні ефекти",
 	sent = "Відправлено",
 	received = "Отримано",
 	nothingFound = "Ефекти не виявлені",
@@ -9,7 +9,7 @@
 	syncInfo = "Перед використанням програми створіть і випийте пакет нанітів. Потім підійдіть впритул до системного блоку або серверної стійки з встановленим бездротовим модемом для синхронізації",
 	syncProgress = "Йде синхронізація з нанітами, не відходьте від комп'ютера до завершення процесу: ",
 	syncContacts = "оновлення біоконтакту %d з %d",
-	favourites = "Вибрані ефекти",
+	favourites = "Обрані ефекти",
 	saveConfiguration = "Зберегти конфігурацію",
 	saveFailed = "Збереження не вдалося: в інвентарі немає несконфігурірованних нанітів",
 	notSynced = "Відбулася розсинхронізація з нанітами. Будь ласка, закрийте програму і запустіть знову.",
