--- a/Applications/Picture Edit.app/Localizations/Ukrainian.lang
+++ b/Applications/Picture Edit.app/Localizations/Ukrainian.lang
@@ -1,5 +1,5 @@
 {
-	recentColors = "Останні кольори",
+	recentColors = "Нещодавні кольори",
 	toolProperties = "Властивості інструменту",
 	aboutTool = "Про інструмент",
 	size = "Розмір:",
@@ -13,7 +13,7 @@
 	width = "Ширина",
 	height = "Висота",
 	open = "Відкрити",
-	openRecent = "Відкрити нещодавно",
+	openRecent = "Відкрити нещодавнє",
 	openFromURL = "Відкрити з URL-адреси",
 	file = "Файл",
 	new = "Новий",
@@ -25,14 +25,13 @@
 	hotkeysText = {
 		"Є кілька гарячих клавіш, які працюють так само, як у справжньому Photoshop:",
 		null,
-		"М - інструмент вибору",
-		"V - інструмент переміщення",
-		"C - інструмент зміни розміру",
-		"Alt - інструмент вибору",
-		"Б - інструмент пензлика",
-		"E - інструмент гумка",
-		"Т – текстовий інструмент",
-		"G – інструмент заповнення",
+		"М та Alt - вибір області",
+		"V - переміщення",
+		"C - масштабування",
+		"Б - пензлик",
+		"E - гумка",
+		"Т – текст",
+		"G – заповнення",
 		"F - інструмент Брайля",
 		null,
 		"X - перемикання кольорів",
@@ -59,21 +58,21 @@
 	symToDraw = "Символ для малювання",
 	alphaVal = "Прозорість:",
 	radius = "Радіус:",
-	tool6 = "Інструмент гумка очищає пікселі так само, як інструмент пензля. ",
-	eraseBack = "Стирати на фоні:",
-	eraseFor = "Стирати на передньому плані:",
-	eraseAlpha = "Стирати прозорість:",
-	eraseSym = "Стирати символи:",
+	tool6 = "Інструмент гумка стирає пікселі. ",
+	eraseBack = "Стерти на фоні:",
+	eraseFor = "Стерти на передньому плані:",
+	eraseAlpha = "Стерти прозорість:",
+	eraseSym = "Стерти символи:",
 	tool7 = "Інструмент «Текст» дозволяє вводити деякі текстові дані з вибраним основним кольором прямо на зображенні! ",
-	tool8 = "Інструмент «Заливка» дозволяє автоматично заповнювати області вибраним основним кольором, як у Paint. ",
+	tool8 = "Інструмент «Заливка» дозволяє автоматично заповнювати області вибраним основним кольором. ",
 	tool9 = "Інструмент Брайля дозволяє малювати пікселі за допомогою символів Брайля на зображенні. ",
 	image = "Зображення",
 	edit = "Редагувати",
 	rotate90 = "Повернути на 90 градусів",
 	rotate180 = "Повернути на 180 градусів",
 	rotate270 = "Повернути на 270 градусів",
-	flipVertical = "Перевернути по вертикально",
-	flipHorizontal = "Перевернути по горизонтально",
+	flipVertical = "Перевернути по вертикалі",
+	flipHorizontal = "Перевернути по горизонталі",
 	hueSaturation = "Відтінок/насиченість",
 	colorBalance = "Баланс кольору",
 	photoFilter = "Фотофільтр",
