--- a/Applications/VK.app/Localizations/Ukrainian.lang
+++ b/Applications/VK.app/Localizations/Ukrainian.lang
@@ -1,9 +1,9 @@
 {
 	leftBarOffset = "5",
-	
+
 	settingsStyle = "Кольорова схема",
 	settingsAdditional = "Додаткові властивості",
-	
+
 	invalidPassword = "Недійсний логін або пароль",
 	username = "Електронна пошта або номер телефону",
 	password = "Пароль",
@@ -11,7 +11,7 @@
 	twoFactorEnabled = "Використовуйте 2FA",
 	twoFactor = "2FA код",
 	saveLogin = "Зберегти інформацію для входу:",
-	
+
 	loadCountConversations = "Кількість завантажених діалогів",
 	loadCountMessages = "Кількість повідомлень для завантаження",
 	loadCountNews = "Кількість завантажених новин",
@@ -19,15 +19,15 @@
 	loadCountWall = "Кількість публікацій для завантаження",
 	loadCountFriends = "Кількість друзів для завантаження",
 	loadCountDocs = "Кількість документів для завантаження",
-	
+
 	profile = "Профіль",
 	message = "повідомлення",
 	sendMessage = "Відправити повідомлення",
 	addToFriends = "Додати в друзі",
 	friendRequestSent = "Запит надіслано",
 	userSubscribedToYou = "Підписався на вас",
-	userIsYourFriend = "У вас є друзі",
-	
+	userIsYourFriend = "У вас є взаємини",
+
 	profileCounters = {
 		{
 			field = "послідовників",
@@ -75,8 +75,8 @@
 		books = "Улюблена книга",
 		tv = "Улюблене шоу",
 		games = "Улюблена гра",
-		quotes = "Улюблена Цитата",
-		religion = "Outlook",
+		quotes = "Улюблена цитата",
+		religion = "Віра",
 		political = "політ. ",
 		peopleMain = "Найважливіші люди",
 		lifeMain = "Життя найважливіше",
@@ -86,43 +86,43 @@
 	months = {
 		"січень",
 		"лютий",
-		"марш",
+		"березень",
 		"квітень",
-		"може",
+		"травень",
 		"червень",
 		"липень",
 		"серпень",
-		"Вересень",
+		"вересень",
 		"жовтень",
-		"Листопад",
-		"Грудень",
+		"листопад",
+		"грудень",
 	},
 	relationStatuses = {
 		{
-			"не одружений",
-			"мати дівчину",
-			"заручений",
-			"одружений",
-			"це складно",
-			"в активному пошуку",
-			"коханець",
-			"у цивільному шлюбі",
+			"Неодружений",
+			"Маю дівчину",
+			"Заручений",
+			"Одружений",
+			"Це складно",
+			"В активному пошуку",
+			"Коханець",
+			"У цивільному шлюбі",
 			[0] = "невизначено",
 		},
 		{
-			"не одружений",
-			"мати друга",
-			"заручений",
-			"одружений",
-			"це складно",
-			"в активному пошуку",
-			"коханець",
-			"у цивільному шлюбі",
+			"Неодружений",
+			"Маю друга",
+			"Заручений",
+			"Одружений",
+			"Це складно",
+			"В активному пошуку",
+			"Коханець",
+			"У цивільному шлюбі",
 			[0] = "невизначено",
 		},
 	},
 	personalPoliticalTypes = {
-		"комуністичний",
+		"Комуністичний",
 		"Соціалістичний",
 		"Помірний",
 		"Ліберальний",
@@ -130,7 +130,7 @@
 		"Монархічний",
 		"Ультраконсервативний",
 		"Байдужий",
-		"лібертаріанський",
+		"Лібертаріанський",
 	},
 	personalPeopleMainTypes = {
 		"Інтелект і креативність",
@@ -157,40 +157,40 @@
 		"Нейтральний",
 		"Позитивний",
 	},
-	
+
 	friends = "Друзі",
-	friendsOnline = "Інтернет друзі",
+	friendsOnline = "Друзі у мережі",
 	friendsMutual = "Спільні друзі",
-	
+
 	news = "Стрічка новин",
-	
+
 	send = "Надіслати",
 	conversations = "Бесіди",
 	you = "Ви:",
 	typeMessageHere = "Напишіть повідомлення...",
 	fwdMessages = "Інформація:",
-	attachments = "Інвестиції:",
+	attachments = "Додатки:",
 	attachmentsTypes = {
 		photo = "фото",
 		video = "відео",
 		audio = "аудіо",
 		doc = "документ",
 		link = "посилання",
-		market = "товарів",
+		market = "продукція",
 		market_album = "каталог продукції",
 		wall = "запис",
 		wall_reply = "репост",
-		sticker = "наклейка",
+		sticker = "стікер",
 		gift = "подарунок",
-		audio_message = "аудіо",
+		audio_message = "аудіо повідомлення",
 	},
 	sentFromMineOS = "(Надіслано через клієнт MineOS VK)",
-	
+
 	documents = "Документи",
 	documentsCount = "Всього документів",
 	documentsAdd = "Завантажити документ",
-	
+
 	settings = "Налаштування",
-	
+
 	exit = "Вийти",
 }
