--- a/Applications/3D Print.app/Localizations/Ukrainian.lang
+++ b/Applications/3D Print.app/Localizations/Ukrainian.lang
@@ -1,9 +1,9 @@
-{	
+{
 	help = "Довідка",
 	helpInfo = {
 		"• Кожна модель складається з форм. Їх кількість залежить від властивостей сервера, але за замовчуванням це 24 на одну модель",
-		"• Модель також може мати 2 стани: пасивний і активний. Якщо ви розміщуєте друковану модель в світі і клацнете по ній, модель змінить свій стан на протилежний. Кількість фігур обмежена обома станами",
-		"• Утримуйте ліву кнопку миші, щоб розмістити першу точку фігури за допомогою X і Y. Перетягніть мишу, щоб змінити розмір фігури. Використовуйте колесо миші для зміни координати Z. Відпустіть кнопку, щоб завершити редагування форми",
+		"• Модель також може мати 2 стани: пасивний і активний. Якщо ви розміщуєте друковану модель в світі і клацнете ПКМ по ній, модель змінить свій стан на протилежний. Кількість фігур обмежена обома станами",
+		"• Утримуйте ліву кнопку миші, щоб розмістити першу точку фігури за віссю X і Y. Перетягніть мишу, щоб змінити розмір фігури. Використовуйте колесо миші для зміни координати Z. Відпустіть кнопку, щоб завершити редагування форми",
 		"• Натисніть праву кнопку миші, щоб вибрати фігуру під курсором",
 		"• Перейдіть на панель інструментів, щоб показати інші опції",
 	},
@@ -17,7 +17,7 @@
 	add = "Додати",
 	remove = "Видалити",
 	rotate = "Повернути",
-	flip = "Відобразити",
+	flip = "Перевернути",
 	color = "Колір",
 	offset = "Зсув",
 	scale = "Масштаб",
