--- a/Applications/Weather.app/Localizations/Ukrainian.lang
+++ b/Applications/Weather.app/Localizations/Ukrainian.lang
@@ -1,18 +1,18 @@
 {
 	winds = {
 		[0] = "Н",
-		[1] = "NE",
+		[1] = "Пн.Сх.",
 		[2] = "Е",
-		[3] = "SE",
+		[3] = "Пд.Сх.",
 		[4] = "С",
 		[5] = "ПЗ",
 		[6] = "В",
-		[7] = "NW",
+		[7] = "Пн.Зх.",
 		[8] = "Н",
 	},
 	mmHg = "мм рт.ст",
 	speed = "РС,",
 	population = "Населення:",
-	city = "Введіть тут назву міста",
-	cityError = "Неправильний результат. ",
+	city = "Введіть назву міста",
+	cityError = "Пошук не дав результатів.",
 }
