--- a/Installer/Localizations/Ukrainian.lang
+++ b/Installer/Localizations/Ukrainian.lang
@@ -3,19 +3,19 @@
 	password = "Пароль",
 	submitPassword = "Підтвердіть пароль",
 	passwordsArentEqual = "Паролі не збігаються",
-	usernameInvalid = "Некоректне ім'я користовача",
+	usernameInvalid = "Некоректне ім'я користувача",
 	withoutPassword = "Без пароля:",
 	wallpapers = "Шпалери:",
 	screensavers = "Заставки:",
 	applications = "Сторонні додатки:",
 	languages = "Пакети підтримки мов:",
 	accept = "Я приймаю:",
-	select = "Виберіть диск для встановлення",
+	select = "Виберіть носій для встановлення",
 	erase = "Стерти",
 	used = "Використано",
 	setup = "Налаштування профілю",
 	customize = "Налаштування завантажень",
-	flashing = "Записуємо EEPROM...",
+	flashing = "Записуємо на EEPROM...",
 	creating = "Створення профілю користувача...",
 	installing = "Встановлення",
 	installed = "MineOS встановлена. Насолоджуйтесь!",
