--- a/Installer/Localizations/Ukrainian.lang
+++ b/Installer/Localizations/Ukrainian.lang
@@ -15,7 +15,7 @@
 	used = "Використано",
 	setup = "Налаштування профілю",
 	customize = "Налаштування завантажень",
-	flashing = "Записуємо на EEPROM...",
+	flashing = "Записуємо EEPROM...",
 	creating = "Створення профілю користувача...",
 	installing = "Встановлення",
 	installed = "MineOS встановлена. Насолоджуйтесь!",
