--- a/Localizations/Bulgarian.lang
+++ b/Localizations/Bulgarian.lang
@@ -74,6 +74,7 @@
 	rename = "Преименуване",
 	editShortcut = "Редактиране на пряк път",
 	createShortcut = "Създаване на пряк път",
+	deleteWithSource = "Изтриване с източник",
 	addToDock = "Добавяне в дока",
 	removeFromDock = "Премахване от дока",
 	moveRight = "Премести вдясно",
