--- a/Localizations/Ukrainian.lang
+++ b/Localizations/Ukrainian.lang
@@ -14,14 +14,14 @@
 	networkTimeout = "Віддалений комп'ютер не відповідає",
 	networkAccessDenied = "Доступ до файлової системи віддаленого комп'ютера заборонений. Зв'яжіться з його власником, щоб отримати відповідні привілеї",
 	networkAllowReadAndWrite = "Доступ до файлової системи ",
-	networkModemNotAvailable = "Підключення модему для використання мережевих функцій",
-	networkState = "Включити мережевий режим",
-	networkComputers = "Параметри мережевих ПК",
+	networkModemNotAvailable = "Підключіть модем для використання мережевих функцій",
+	networkState = "Увімкнути мережевий режим",
+	networkComputers = "Параметри віддалених ПК",
 	networkName = "Ім'я цього ПК",
 	networkSearchRadius = "Радіус пошуку",
 	openWith = "Відкрити за допомогою",
 	select = "Вибрати додаток…",
-	keepInDock = "Зберігати в доці",
+	keepInDock = "Зберігати в Dock",
 	closeAllWindows = "Закрити всі вікна",
 	closeWindow = "Закрити",
 	newWindow = "Нове вікно",
@@ -55,7 +55,7 @@
 	path = "Шлях",
 	folder = "Папка",
 	unknown = "Невідомо",
-	calculatingSize = "йде підрахунок…",
+	calculatingSize = "йде підсумок…",
 	filesWillBeRemovedPermanently = "файл(и) буде видалено назавжди",
 	fileDeletingFailure = "Не вдалося видалити файл",
 
@@ -73,11 +73,11 @@
 	edit = "Редагувати",
 	editInPhotoshop = "Редагування в Photoshop",
 	rename = "Перейменувати",
-	editShortcut = "Змінити ярлик",
+	editShortcut = "Редагувати ярлик",
 	createShortcut = "Створити ярлик",
 	deleteWithSource = "Видалити з джерелом",
-	addToDock = "Додати в док",
-	removeFromDock = "Видалити з док",
+	addToDock = "Додати в Dock",
+	removeFromDock = "Видалити з Dock",
 	moveRight = "Перемістити вправо",
 	moveLeft = "Перемістити вліво",
 	archive = "Додати в архів",
@@ -88,7 +88,7 @@
 	showPackageContent = "Показати вміст пакету",
 	showContainingFolder = "Показати папку",
 	flashEEPROM = "Записати на EEPROM",
-	flashingEEPROM = "Запис в процесі. Не вимикайте комп'ютер...",
+	flashingEEPROM = "Йде запис на EEPROM. Не вимикайте комп'ютер...",
 	print3D = "Роздрукувати модель",
 
 	sortBy = "Сортувати",
@@ -120,8 +120,8 @@
 	mounts = "Пристрої",
 
 	uploadToPastebin = "Завантажити на Pastebin",
-	pasteName = "Вставити ім'я",
-	uploading = "Йде завантаження...",
-	uploadingSuccess = "Завантажено в ",
+	pasteName = "Ім'я файлу після завантаження",
+	uploading = "Йде завантаження файла...",
+	uploadingSuccess = "Завантажено за посиланням ",
 	uploadingFailure = "Помилка при завантаженні: "
 }
