Бля! Сколько ж лет назад я ошибся то...

--- a/Applications/Picture Edit.app/Localizations/Russian.lang
+++ b/Applications/Picture Edit.app/Localizations/Russian.lang
@@ -45,7 +45,7 @@
 	rasterizeEllipse = "Растеризировать эллипс",
 	clear = "Очистить",
 	crop = "Обрезать",
-	tool2 = "Инструмент перемещения позволять перемещать изображение куда угодно. Осторожно: большим картинками нужно много времени на перерисовку. Приветик, дерьмовые GPU!",
+	tool2 = "Инструмент перемещения позволять перемещать изображение куда угодно. Осторожно: большим картинкам нужно много времени на перерисовку. Приветик, дерьмовые GPU!",
 	tool3 = "Инструмент изменения размера позволяет изменять размер изображения в реальном времени. Вы можете указать направление, ввести ширину и высоту, затем умный скрипт сделает все за вас.",
 	expand = "Расширить",
 	tool4 = "Инструмент пипетка позволяет получать первичный и вторичный цвет выбранного пикселя. Вы можете выбрать, какие цвета захватывать.",
