--- a/Installer/Localizations/German.lang
+++ b/Installer/Localizations/German.lang
@@ -1,11 +1,11 @@
 {
-	username = "Benutzernamen",
+	username = "Benutzername",
 	password = "Passwort",
 	submitPassword = "Passwort Absenden",
 	passwordsArentEqual = "Passwörter sind nicht gleich",
-	usernameInvalid = "Invalid username",
+	usernameInvalid = "Ungültiger Benutzer",
 	withoutPassword = "Ohne Passwort:",
-	wallpapers = "Wallpaper:",
+	wallpapers = "Hintergrundbild:",
 	screensavers = "Bildschirmschoner:",
 	applications = "Apps von Drittanbietern:",
 	languages = "Sprachpakete:",
