--- a/Installer/Localizations/English.lang
+++ b/Installer/Localizations/English.lang
@@ -5,7 +5,7 @@
 	passwordsArentEqual = "Passwords are not the same. Try Again.",
 	usernameInvalid = "Invalid username",
 	withoutPassword = "Don't use a password:",
-	wallpapers = "Wallpapers:",
+	wallpapers = "Additional wallpapers:",
 	screensavers = "Screensavers:",
 	applications = "Third party apps:",
 	languages = "Language packs:",
