--- a/Applications/App Market.app/Localizations/Arabic.lang
+++ b/Applications/App Market.app/Localizations/Arabic.lang
@@ -20,6 +20,7 @@
 	categoryLibraries = "مكتبات",
 	categoryScripts = "نصوص",
 	categoryUpdates = "التحديثات",
+	categoryWallpapers = "Wallpapers",
 	
 	statisticsNewUser = "مستخدم جديد",
 	statisticsMostPopularUser = "أكثر نشاطا",
