--- a/Applications/App Market.app/Localizations/Belarusian.lang
+++ b/Applications/App Market.app/Localizations/Belarusian.lang
@@ -20,6 +20,7 @@
 	categoryLibraries = "Бібліятэкі",
 	categoryScripts = "Сцэнарыі",
 	categoryUpdates = "Абнаўленні",
+	categoryWallpapers = "Wallpapers",
 	
 	statisticsNewUser = "Новы карыстальнік",
 	statisticsMostPopularUser = "Найбольш актыўныя",
