--- a/Applications/App Market.app/Localizations/Bengali.lang
+++ b/Applications/App Market.app/Localizations/Bengali.lang
@@ -20,6 +20,7 @@
 	categoryLibraries = "লাইব্রেরি",
 	categoryScripts = "স্ক্রিপ্ট",
 	categoryUpdates = "আপডেট",
+	categoryWallpapers = "Wallpapers",
 	
 	statisticsNewUser = "নতুন ব্যবহারকারী",
 	statisticsMostPopularUser = "সবচেয়ে সক্রিয়",
