--- a/Applications/App Market.app/Localizations/Bulgarian.lang
+++ b/Applications/App Market.app/Localizations/Bulgarian.lang
@@ -20,6 +20,7 @@
 	categoryLibraries = "библиотеки",
 	categoryScripts = "Скриптове",
 	categoryUpdates = "Актуализации",
+	categoryWallpapers = "Wallpapers",
 	
 	statisticsNewUser = "Нов потребител",
 	statisticsMostPopularUser = "Най-активен",
