--- a/Applications/App Market.app/Localizations/Hindi.lang
+++ b/Applications/App Market.app/Localizations/Hindi.lang
@@ -20,6 +20,7 @@
 	categoryLibraries = "पुस्तकालयों",
 	categoryScripts = "स्क्रिप्ट",
 	categoryUpdates = "अपडेट",
+	categoryWallpapers = "Wallpapers",
 	
 	statisticsNewUser = "नए उपयोगकर्ता",
 	statisticsMostPopularUser = "सर्वाधिक क्रियाशील",
