--- a/Applications/App Market.app/Localizations/Italian.lang
+++ b/Applications/App Market.app/Localizations/Italian.lang
@@ -20,6 +20,7 @@
 	categoryLibraries = "Biblioteca",
 	categoryScripts = "Script",
 	categoryUpdates = "Aggiornare",
+	categoryWallpapers = "Wallpapers",
 	
 	statisticsNewUser = "Nuovo utente",
 	statisticsMostPopularUser = "Più attivo",
