--- a/Applications/App Market.app/Localizations/Lolcat.lang
+++ b/Applications/App Market.app/Localizations/Lolcat.lang
@@ -20,6 +20,7 @@
 	categoryLibraries = "Libraries",
 	categoryScripts = "scriptz",
 	categoryUpdates = "updatez",
+	categoryWallpapers = "wlpooperz",
 	
 	statisticsNewUser = "nu usr",
 	statisticsMostPopularUser = "Most actiev",
