--- a/Applications/App Market.app/Localizations/Polish.lang
+++ b/Applications/App Market.app/Localizations/Polish.lang
@@ -20,6 +20,7 @@
 	categoryLibraries = "Biblioteki",
 	categoryScripts = "Skrypty",
 	categoryUpdates = "Aktualizacje",
+	categoryWallpapers = "Wallpapers",
 	
 	statisticsNewUser = "Nowy użytkownik",
 	statisticsMostPopularUser = "Najbardziej aktywny",
