--- a/Applications/App Market.app/Localizations/Portuguese.lang
+++ b/Applications/App Market.app/Localizations/Portuguese.lang
@@ -20,6 +20,7 @@
 	categoryLibraries = "Bibliotecas",
 	categoryScripts = "Scripts",
 	categoryUpdates = "Atualizações",
+	categoryWallpapers = "Wallpapers",
 	
 	statisticsNewUser = "Novo usuário",
 	statisticsMostPopularUser = "Mais ativo",
