--- a/Applications/App Market.app/Localizations/Russian.lang
+++ b/Applications/App Market.app/Localizations/Russian.lang
@@ -20,6 +20,7 @@
 	categoryLibraries = "Библиотеки",
 	categoryScripts = "Скрипты",
 	categoryUpdates = "Обновления",
+	categoryWallpapers = "Обои",
 
 	statisticsNewUser = "Новый пользователь",
 	statisticsMostPopularUser = "Наиболее активный",
