--- a/Applications/App Market.app/Localizations/German.lang
+++ b/Applications/App Market.app/Localizations/German.lang
@@ -20,6 +20,7 @@
 	categoryLibraries = "Bibliothek",
 	categoryScripts = "Skript",
 	categoryUpdates = "Aktualisierung",
+	categoryWallpapers = "Wallpapers",
 	
 	statisticsNewUser = "Neuer Benutzer",
 	statisticsMostPopularUser = "Aktivsten",
