--- a/Applications/App Market.app/Localizations/Slovak.lang
+++ b/Applications/App Market.app/Localizations/Slovak.lang
@@ -20,6 +20,7 @@
 	categoryLibraries = "Knižnice",
 	categoryScripts = "Skriptá",
 	categoryUpdates = "Aktualizácie",
+	categoryWallpapers = "Wallpapers",
 	
 	statisticsNewUser = "Nový užívateľ",
 	statisticsMostPopularUser = "Najaktívnejší",
