--- a/Applications/App Market.app/Localizations/Ukrainian.lang
+++ b/Applications/App Market.app/Localizations/Ukrainian.lang
@@ -20,7 +20,7 @@
 	categoryLibraries = "Бібліотеки",
 	categoryScripts = "Скрипти",
 	categoryUpdates = "Оновлення",
-	categoryWallpapers = "Wallpapers",
+	categoryWallpapers = "Шпалери",
 
 	statisticsNewUser = "Новий користувач",
 	statisticsMostPopularUser = "Найбільш активний",
