--- a/Applications/App Market.app/Localizations/Chinese.lang
+++ b/Applications/App Market.app/Localizations/Chinese.lang
@@ -20,7 +20,7 @@
 	categoryLibraries = "库",
 	categoryScripts = "脚本",
 	categoryUpdates = "更新",
-	categoryWallpapers = "Wallpapers",
+	categoryWallpapers = "壁紙",
 	
 	statisticsNewUser = "新用户",
 	statisticsMostPopularUser = "最积极",
