--- a/Applications/App Market.app/Localizations/French.lang
+++ b/Applications/App Market.app/Localizations/French.lang
@@ -20,7 +20,7 @@
 	categoryLibraries = "API",
 	categoryScripts = "Scénarios",
 	categoryUpdates = "Mises à jour",
-	categoryWallpapers = "Wallpapers",
+	categoryWallpapers = "Fonds d'écran",
 	
 	statisticsNewUser = "Nouvel utilisateur",
 	statisticsMostPopularUser = "Plus actif",
