--- a/Applications/App Market.app/Localizations/German.lang
+++ b/Applications/App Market.app/Localizations/German.lang
@@ -20,7 +20,7 @@
 	categoryLibraries = "Bibliothek",
 	categoryScripts = "Skript",
 	categoryUpdates = "Aktualisierung",
-	categoryWallpapers = "Wallpapers",
+	categoryWallpapers = "Hintergrundbilder",
 	
 	statisticsNewUser = "Neuer Benutzer",
 	statisticsMostPopularUser = "Aktivsten",
