--- a/Applications/VK.app/Localizations/Arabic.lang
+++ b/Applications/VK.app/Localizations/Arabic.lang
@@ -31,24 +31,24 @@
 	profileCounters = {
 		{
 			field = "متابعون",
-			description = "متابعون",
+			description = "متابعون"
 		},
 		{
 			field = "اصحاب",
-			description = "اصحاب",
+			description = "اصحاب"
 		},
 		{
 			field = "الصور",
-			description = "الصور",
+			description = "الصور"
 		},
 		{
 			field = "أشرطة فيديو",
-			description = "أشرطة فيديو",
+			description = "أشرطة فيديو"
 		},
 		{
 			field = "صوتيات",
-			description = "صوتي",
-		},
+			description = "صوتي"
+		}
 	},
 	profileShowAdditional = "اظهر التفاصيل",
 	profileHideAdditional = "إخفاء المعلومات التفصيلية",
@@ -81,7 +81,7 @@
 		peopleMain = "الناس أهم",
 		lifeMain = "الحياة اهم",
 		alcohol = "OTN. ",
-		smoking = "OTN. ",
+		smoking = "OTN. "
 	},
 	months = {
 		"كانون الثاني",
@@ -95,7 +95,7 @@
 		"شهر تسعة",
 		"اكتوبر",
 		"شهر نوفمبر",
-		"ديسمبر",
+		"ديسمبر"
 	},
 	relationStatuses = {
 		{
@@ -107,7 +107,7 @@
 			"في البحث النشط",
 			"عاشق",
 			"في الزواج المدني",
-			[0] = "غير محدد ",
+			[0] = "غير محدد "
 		},
 		{
 			"غير متزوج",
@@ -118,8 +118,8 @@
 			"في البحث النشط",
 			"عاشق",
 			"في الزواج المدني",
-			[0] = "غير محدد ",
-		},
+			[0] = "غير محدد "
+		}
 	},
 	personalPoliticalTypes = {
 		"شيوعي",
@@ -130,7 +130,7 @@
 		"ملكي",
 		"محافظ جدا",
 		"غير مبال",
-		"ليبرتاري",
+		"ليبرتاري"
 	},
 	personalPeopleMainTypes = {
 		"الذكاء والإبداع",
@@ -138,7 +138,7 @@
 		"الجمال والصحة",
 		"القوة والثروة",
 		"الشجاعة والمثابرة",
-		"النكتة وحب الحياة",
+		"النكتة وحب الحياة"
 	},
 	personalLifeMainTypes = {
 		"الأسرة والأطفال",
@@ -148,21 +148,21 @@
 		"تحسين العالم",
 		"تطوير الذات",
 		"الجمال والفن",
-		"الشهرة والتأثير",
+		"الشهرة والتأثير"
 	},
 	personalBlyadTypes = {
 		"حاد سلبي",
 		"نفي",
 		"مساومة",
 		"محايد",
-		"إيجابي",
+		"إيجابي"
 	},
 	
 	friends = "اصحاب",
 	friendsOnline = "الأصدقاء عبر الإنترنت",
 	friendsMutual = "الاصدقاء المشتركه",
 	
-	news = "Newsfeed",
+	news = "ملف الأخبار",
 	
 	send = "يرسل",
 	conversations = "المحادثات",
@@ -182,7 +182,7 @@
 		wall_reply = "إعادة نشر",
 		sticker = "ملصق",
 		gift = "هدية مجانية",
-		audio_message = "صوتي",
+		audio_message = "صوتي"
 	},
 	sentFromMineOS = "(تم الإرسال عبر MineOS VK Client)",
 	
@@ -192,5 +192,5 @@
 	
 	settings = "إعدادات",
 	
-	exit = "تسجيل خروج",
+	exit = "تسجيل خروج"
 }
